--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ h1 {
 	background-position: center;
 	width: 100%;
 	height: 300px;
+	cursor: default;
 }
 
 #logoSmall {
@@ -36,6 +37,7 @@ h1 {
 	height: 150px;
 	float: left;
 	margin-right: 20px;
+	cursor: default;
 }
 
 #footer {
@@ -104,6 +106,7 @@ input[type=text], input[type=password], textarea {
 
 th {
 	background-color: #CCC;
+	cursor:default;
 }
 
 table tr:nth-child(even) {
