--- a/style.css
+++ b/style.css
@@ -143,7 +143,9 @@ table tr:hover{
 #overlay {
 	padding: 20px;
 	position: absolute;
-	top: 20%;
+	top: 10%;
+	overflow:scroll;
+	bottom: 10%;
 	left: 25%;
 	right: 25%;
 	background-color: white;
