--- a/style.css
+++ b/style.css
@@ -167,3 +167,48 @@ label{
 img{
 	border:0;
 }
+
+/* **************************************************
+		STIJL VOOR KALENDER
+   ************************************************** */
+.calendar-box {
+	display:none;
+	background-color:#fff;
+	border:1px solid #444;
+	position:absolute;
+	width:250px;
+	padding: 0 5px;
+	z-index:8;
+}
+.calendar-box select.calendar-month {
+	width:90px;
+}
+.calendar-box select.calendar-year {
+	width:70px;
+}
+.calendar-box .calendar-cancel {
+	width:100%;
+}
+.calendar-box table td {
+	width:14%;
+}
+
+.calendar-box table tr:nth-child(even), .calendar-box table tr:nth-child(odd) {
+	background-color: white;
+}
+.calendar-box .calendar-title {
+	text-align:center;
+}
+.calendar-box a {
+	text-decoration:none;
+}
+.calendar-box .today a {
+	padding:0 5px;
+	margin-left:-5px;
+	font-weight:bold;
+} 
+.calendar-box .selected a {
+	padding:0 5px;
+	margin-left:-5px;
+	background-color:#CCC;
+}
