--- a/style.css
+++ b/style.css
@@ -244,5 +244,5 @@ background-image: url('img/warning.png');
 .error {
 color: #D8000C;
 background-color: #FFBABA;
-background-image: url('error.png');
+background-image: url('img/error.png');
 }
