--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 	color: #777;
 	margin: 0 auto 0 auto;
 	width: 1000px;
-	padding: 30px;
+	padding: 30px 0 30px 0;
 	font-family: Georgia;
 }
 
